# Crawler_

./: .gitignore  deep_crawling.py  handling.py  pyproject.toml  readme.md  requirements.txt  sitemap.xml  testing.py
data/raw/sitemap/: sitemap_data.xml
src/crawler/: adaptive_crwl.py  config.py  constants.py  crawler.py  exceptions.py  logger.py  models.py  sitemap.py  utils.py
storage/datasets/default/: 000000002.json  000000003.json  000000004.json  000000005.json  000000006.json  000000007.json  000000008.json  000000009.json  000000010.json  000000011.json  000000012.json  000000013.json  000000014.json  000000015.json  000000016.json  __metadata__.json
storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_0.__metadata__.json  __RQ_STATE_02tHGLHWZRZdLShd9  __RQ_STATE_02tHGLHWZRZdLShd9.__metadata__.json  __metadata__.json
storage/request_queues/default/: 013edd795011b29.json  015399ca24dd5ec.json  0174a84ca4e7a9a.json  0217b60d11d00c9.json  026e820763cffa8.json  029fb529b7fc8e7.json  03b364f82266da7.json  053956eff59eea5.json  06027fdd43afb9d.json  0634b83ec8a8a95.json  066f9738fb6a6c0.json  06c0b241649abfe.json  0737f87535404de.json  07af2d76f75e4a7.json  07bfdc5cb94b819.json  087ed7ef67b2b46.json  08f775453a31fba.json  09577f0b00e2c57.json  09b3f1d66f5526a.json  0a0145598e80a2d.json  0a67bcccf0c89a6.json  0b250794a85a797.json  0b5df226728e815.json  0bb8cda7318e7b1.json  0cd64213dda6d21.json  0d0328a3f36a1ab.json  0d17c77ff863a27.json  0d210aeace8c037.json  0e5e39aa1347a15.json  0e794c54c8f4983.json  0f6608d98f3d6d3.json  (+459 more)
