[project]
name = "Search-Engine"
version = "0.1.0"
description = "Search Engine for a specific domain (AI, Coding, Research Paper)"
readme = "reame.md"
requires-python = ">=3.14"
dependencies = [
    "crawl4ai>=0.9.1",
    "pydantic-settings>=2.14.2",
    "sentence-transformers>=5.6.0",
    "transformers>=5.13.0",
    "ultimate-sitemap-parser>=1.8.1",
]
